--- a/Curs01/Ex01/css/style.css
+++ b/Curs01/Ex01/css/style.css
@@ -10,6 +10,10 @@ body {
   float: left;
 }
 
+body > h1 {
+  display: none;
+}
+
 .box-1 {
   background-color: aquamarine;
 }
@@ -30,17 +34,96 @@ body {
   background-color: lightpink;
 }
 
+body > h2 {
+  display: none;
+}
+
+body > h3 {
+  display: none;
+}
 
 @media (max-width: 576px) {
+.box-2 {
+  display: none;
+}
 
+.box-1 {
+  display: none;
+}
+
+body {
+  padding: 15px;
+}
 }
 
 @media (max-width: 768px) {
+.box-5 {
+  color: white;
+}
+
+.box-3 {
+  border: green;
+}
 
 }
 
 @media (max-width: 992px) {
+  .box-4 {
+    display: none;
+  }
+
+  .box-2 {
+    border: yellow;
+    color: white;
+  }
 
 }
 
+/* @media (min-width: 1200px) {
+  .box-5 {
+    display: none;
+  }
+}*/
 
+@media (min-width: 992px) {
+  /* rezolutii mai mari de 992 */
+  .box-3 {
+    display: none;
+  }
+
+  .box-4 {
+    color: red;
+  }
+
+.box-1 {
+  display: none;
+}
+}
+
+@media (min-width: 600px) and (max-width: 1200px) {
+body > h1 {
+  display: block;
+}
+}
+
+.h3 {
+  display: none;
+}
+
+@media (min-width: 1200px) {
+body > h3 {
+display: none;
+}
+}
+
+@media (min-width: 1000px) {
+  body > h3 {
+    color: red;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 1000px) {
+body > h2 {
+  display: block;
+}
+}
