--- a/Curs02/Ex04/scss/app.scss
+++ b/Curs02/Ex04/scss/app.scss
@@ -7,5 +7,26 @@
 .box {
   width: 150px;
   height: 150px;
-  border: 1px solid #000;
+  border: 0px solid #000;
+}
+
+@for $i from 1 through 5 {
+  .box-#{$i} {
+    border: 0px + $i;
+  }
+}
+
+@for $i from 1 to 6 {
+  .box-0#{$i} {
+    width: 145px + $i * 5;
+    height: 145px + $i * 5;
+  }
+}
+
+@for $i from 1 through 5 {
+  .box-#{$i}0 {
+    @if $i % 2 != 0 {
+      background-color: gray;
+    }
+  }
 }
