--- a/Curs02/Ex05/scss/app.scss
+++ b/Curs02/Ex05/scss/app.scss
@@ -9,3 +9,21 @@
   height: 150px;
   border: 1px solid #000;
 }
+
+@for $i from 1 to 10 {
+  .box-0#{$i} {
+    border-width: $i * 1px;
+  }
+}
+
+@for $i from 1 through 9 {
+  .box-#{$i} {
+    background-color: gray;
+  }
+
+  .box-#{$i} {
+    border: dotted purple;
+  }
+}
+
+// sa fac unu pt par si unu pt impar
