--- a/Curs02/Ex06/css/style.css
+++ b/Curs02/Ex06/css/style.css
@@ -30,20 +30,36 @@
   border-style: none;
 }
 
-.mxs {
+.m-xs {
   margin: 4px;
 }
 
-.msm {
+.m-sm {
   margin: 8px;
 }
 
-.mmd {
+.m-md {
   margin: 16px;
 }
 
-.mlg {
+.m-lg {
   margin: 32px;
+}
+
+.p-xs {
+  padding: 4px;
+}
+
+.p-sm {
+  padding: 8px;
+}
+
+.p-md {
+  padding: 16px;
+}
+
+.p-lg {
+  padding: 32px;
 }
 
 /*# sourceMappingURL=style.css.map */
