--- a/Curs07/Ex01/css/style.css
+++ b/Curs07/Ex01/css/style.css
@@ -1,3 +1,35 @@
+@keyframes animation-01 {
+  0% {
+    background-color: red;
+    width: 50px;
+  }
+
+  100% {
+    background-color: red;
+    width: 100%;
+  }
+}
+
+.bar-01 {
+  animation: animation-01 10s ease-in;
+}
+
+@keyframes animation-02 {
+  0% {
+    background-color: green;
+    width: 150px;
+  }
+
+  100% {
+    background-color: green;
+    width: 100%;
+  }
+}
+
+.bar-02 {
+  animation: animation-02 8s linear;
+}
+
 @keyframes animation-03 {
   0% {
     background-color: blue;
@@ -25,13 +57,66 @@
   animation: animation-03 12s ease-in;
   /* animation-fill-mode: forwards; */
 }
-/* cand e la 33 sec din 12 sec are yellow si latimea de 75% */
+/* cand e la 33 sec din 12 sec are yellow
+si latimea de 75% */
+
+@keyframes animation-04 {
+  0% {
+    background-color: red;
+    width: 100%;
+  }
+
+  33.3% {
+    background-color: blue;
+    width: 50%;
+  }
+
+  66.6% {
+    background-color: black;
+    width: 50%;
+  }
+
+  100% {
+    background-color: orange;
+    width: 150px;
+  }
+}
+
+.bar-04 {
+  animation: animation-04 15s ease-out;
+}
+
+
+@keyframes animation-05 {
+  0% {
+    background-color: green;
+    width: 100%;
+  }
+
+  33.3% {
+    background-color: red;
+    width: 500px;
+  }
+
+  66.6% {
+    background-color: green;
+    width: 75%;
+  }
+
+  100% {
+    background-color: orange;
+    width: 500px;
+  }
+}
+
+.bar-05 {
+  animation: animation-05 8s linear;
+}
 
 @keyframes animation-06 {
   from {
     width: 200px;
   }
-
   to {
     width: 100%;
   }
