--- a/Curs09/Ex01/css/style.css
+++ b/Curs09/Ex01/css/style.css
@@ -38,16 +38,44 @@
 }
 /* do not touch this */
 
-.flex-container {
+.flex-container-03 {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
 }
 
-.flex-contianer-05 {
+.flex-container-05 {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-around;
   align-items: flex-end;
+}
+
+.flex-container-01 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container-02 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.flex-container-04 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.flex-container-06 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: flex-start;
 }
