--- a/Curs09/Ex03/css/style.css
+++ b/Curs09/Ex03/css/style.css
@@ -62,3 +62,32 @@ body {
   justify-content: center;
   align-items: flex-end;
 }
+
+.flex-container-01 {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+
+.flex-container-02 {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.flex-container-04 {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.flex-container-05 {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center
+}
