--- a/Curs09/Ex04/css/style.css
+++ b/Curs09/Ex04/css/style.css
@@ -60,5 +60,47 @@
 }
 
 .flex-container-03 .flex-item:nth-of-type(2) {
-  align-self:flex-start;
+  align-self: flex-start;
+}
+
+.flex-container-01 {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.flex-container-01 .flex-item:nth-of-type(4) {
+  align-self: center;
+}
+
+.flex-container-04 {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.flex-container-04 :last-child {
+  align-self: center;
+}
+
+.flex-container-05 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+[id="3"] {
+  align-self: stretch;
+  width: auto;
+}
+
+.flex-container-06 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.flex-container-06 :nth-child(4) {
+  align-self: flex-end;
 }
