--- a/Curs09/Ex05/css/style.css
+++ b/Curs09/Ex05/css/style.css
@@ -74,3 +74,47 @@ body {
   width: auto;
   max-width: unset;
 }
+
+.flex-container-01 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.flex-container-01 :last-child {
+  align-self: flex-start;
+}
+
+.flex-container-02 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container-02 :nth-of-type(5) {
+  align-self: flex-end;
+}
+
+.flex-container-04 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.flex-container-04 :nth-child(5) {
+  align-self: flex-start;
+}
+
+.flex-container-06 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.flex-container-06 :nth-child(3) {
+  align-self: flex-end;
+}
