--- a/Curs09/Ex06/css/style.css
+++ b/Curs09/Ex06/css/style.css
@@ -69,3 +69,54 @@
 .flex-container-05 :nth-child(3) + div {
   flex-grow: 2;
 }
+
+.flex-container-01 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-container-01 :nth-child(2) {
+  flex-grow: 1;
+  align-self: stretch;
+  width: auto;
+}
+
+.flex-container-03 {
+  display: flex;
+  align-items: flex-end;
+}
+
+.flex-container-03 :nth-child(2) {
+  flex-grow: 1;
+  align-self: stretch;
+}
+
+.flex-container-03 :nth-child(4) {
+  flex-grow: 2;
+  align-self: stretch;
+}
+
+.flex-container-04 {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+/* spune pe verticala dar pixeltab cere row reverse */
+
+.flex-container-04 :last-child {
+  flex-grow: 1;
+  align-self: stretch;
+  height: auto;
+  /* width: auto; */
+}
+
+.flex-container-06 {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.flex-container-06 :nth-child(4) {
+  flex-grow: 1;
+  align-self: stretch;
+}
