--- a/Curs09/Ex07/css/style.css
+++ b/Curs09/Ex07/css/style.css
@@ -70,3 +70,47 @@ body {
 .flex-container-06 :nth-last-child(1) {
   flex-grow: 1;
 }
+
+.flex-container-01 {
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.flex-container-01 :nth-of-type(5) {
+  flex-grow: 1;
+}
+
+.flex-container-01 :nth-of-type(3) {
+  flex-grow: 2;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.flex-container-02 :nth-of-type(2) {
+  flex-grow: 1;
+}
+
+.flex-container-03 {
+  flex-direction: column-reverse;
+  align-items: flex-start;
+}
+
+.flex-container-03 :nth-of-type(2) {
+  flex-grow: 2;
+}
+
+.flex-container-03 :nth-of-type(4) {
+  flex-grow: 1;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.flex-container-04 :nth-of-type(2) {
+  flex-grow: 1;
+}
