--- a/Curs09/Ex09/css/style.css
+++ b/Curs09/Ex09/css/style.css
@@ -67,3 +67,61 @@ body {
 .flex-container-01 div:nth-last-of-type(4) {
   flex-shrink: 2;
 }
+
+.flex-container-02 {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-container-02 :first-child + div {
+  flex-shrink: 2;
+}
+
+.flex-container-02 :last-child {
+  flex-shrink: 3;
+}
+
+.flex-container-03 {
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.flex-container-03 :nth-child(3) {
+  flex-shrink: 2;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container-04 :nth-of-type(3) {
+  flex-shrink: 3;
+}
+
+.flex-container-04 :nth-of-type(4) {
+  flex-shrink: 2;
+}
+
+.flex-container-05 {
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.flex-container-05 :nth-of-type(4) {
+  flex-shrink: 2;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-container-06 :nth-of-type(5) {
+  flex-shrink: 2;
+}
