--- a/Curs09/Ex11/css/style.css
+++ b/Curs09/Ex11/css/style.css
@@ -68,3 +68,52 @@ order: -2;
 .flex-container-03 :nth-last-of-type(2) {
   order: 1;
 }
+
+.flex-container-01 {
+  flex-direction: column-reverse;
+}
+
+.flex-container-01 :nth-of-type(2) {
+  order: 1;
+}
+
+.flex-container-04 {
+  flex-direction: column-reverse;
+}
+
+.flex-container-04 :last-child {
+  order: -2;
+  }
+
+
+  .flex-container-04 :nth-last-of-type(2) {
+    order: -2;
+  }
+
+  .flex-container-05 {
+    flex-direction: column-reverse;
+  }
+
+  .flex-container-05 :first-child + div {
+    order: 1;
+  }
+
+  .flex-container-05 :nth-of-type(4) {
+    order: -1;
+  }
+
+  .flex-container-06 {
+    flex-direction: column;
+  }
+
+  .flex-container-06 :first-child + div {
+    order: 1;
+  }
+
+  .flex-container-06 :last-child {
+    order: 1;
+  }
+
+  .flex-container-06 :nth-of-type(4) {
+      order: 1;
+  }
