--- a/Curs09/Ex12/css/style.css
+++ b/Curs09/Ex12/css/style.css
@@ -54,3 +54,33 @@ body {
   align-content: space-between;
 }
 /* wrap-sa sara randul urmator */
+
+.flex-container-01 {
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: space-around;
+}
+
+.flex-container-02 {
+  flex-wrap: wrap-reverse;
+  justify-content: space-between;
+  align-content: space-between;
+}
+
+.flex-container-04 {
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-end;
+}
+
+.flex-container-05 {
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+}
+
+.flex-container-06 {
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
