--- a/Curs11/Ex12/css/style.css
+++ b/Curs11/Ex12/css/style.css
@@ -17,3 +17,25 @@
   background-color: lightgreen;
 }
 /* can't touch this 🔨 */
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    '1 1 1 1'
+    '2 2 2 2'
+    '3 3 3 3';
+  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px;
+}
+
+.grid-item-1 {
+  grid-area: 1 / 1 / 3 / 3;
+}
+
+.grid-item-2 {
+  grid-area: 4 / 1 / 5 / 5;
+}
+
+.grid-item-3 {
+  grid-area: 3 / 1 / 4 / 5;
+}
